@@ -2,21 +2,26 @@
 
 all:
 	make -C janadot
+	make -C janaroot
 	make -C TestSpeed
 
 install:
 	make -C janadot install
+	make -C janaroot install
 	make -C TestSpeed install
 
 uninstall:
 	make -C janadot uninstall
+	make -C janaroot uninstall
 	make -C TestSpeed uninstall
 
 pristine:
 	make -C janadot pristine
+	make -C janaroot pristine
 	make -C TestSpeed pristine
 
 clean:
 	make -C janadot clean
+	make -C janaroot clean
 	make -C TestSpeed clean
 
